--- a/facilities.html
+++ b/facilities.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luxury Hotel</title>
-    <link rel="stylesheet" href="/css/facilities.css">
-    <link rel="icon" href="/images/logo.png" type="luxury-hotel-logo">
+    <link rel="stylesheet" href="css/facilities.css">
+    <link rel="icon" href="images/logo.png" type="luxury-hotel-logo">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
 </head>
@@ -13,21 +13,21 @@
 <body>
 <!-- Header Start -->
 <header>
-   <a href="#"><img src="/images/logo.png" class="logo" width="150" height="120"></a>
+   <a href="#"><img src="images/logo.png" class="logo" width="150" height="120"></a>
 
    <div>
      <ul id="navbar">
-         <li><a class="active" href="/index.html">Home</a></li>
+         <li><a class="active" href="index.html">Home</a></li>
          <li><a href="rooms.html">Rooms</a></li>
          <li><a href="facilities.html">Facilities</a></li>
          <li><a href="faq.html">Faq</a></li>
          <li><a href="ourteam.html">Our Teams</a></li>
-         <li><a id="login" href="login.html"><i class="fas fa-user"></i></a></li>
+         <!-- <li><a id="login" href="login.html"><i class="fas fa-user"></i></a></li> -->
          <a href="#" id="close"><i class="fas fa-times" style="color: #B9A13F;"></i></a>
      </ul>
    </div>
    <div id="mobile">
-     <a href="login.html"><i class="fas fa-user" style="color: #B9A13F;"></i></a>
+     <!-- <a href="login.html"><i class="fas fa-user" style="color: #B9A13F;"></i></a> -->
      <i id="bar" class="fas fa-outdent" style="color: #B9A13F;"></i>
    </div>
 </header>
@@ -37,67 +37,73 @@
    <section class="team">
       <div class="center">
          <h1>Facilities</h1>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
-            Exercitationem, ex.</p>
+         <p>Luxury Hotel offers an incredible array of amenities, including a traditional Spa, an awe-inspiring infinity Swimming Pool, a well-equipped Fitness Center with a gym, <br>
+            relaxing Steam and sauna facilities, and a professional Hair & Beauty Salon for a complete relaxation experience.</p>
       </div>
       <div class="card__container">
          <div class="card__article">
             <h2>Parking Area</h2>
-            <img src="/images/parkingArea.jpg" alt="image" class="card__img">
+            <img src="images/parkingArea.jpg" alt="image" class="card__img">
 
             <div class="card__data">
-               <span class="card__description">Luxury Hotel</span>
-               <p class="card__title">Wedding</p>
+               <p class="card__title"><b style="padding-right: 5px;">Location:</b>Lobby Floor & Basement</p>
+               <p class="card__title"><b style="padding-right: 5px;">Open:</b>24 Hour</p>
+               <p class="card__title"><b style="padding-right: 5px;">Available for:</b>All Type of Rooms</p>
             </div>
          </div>
 
          <div class="card__article">
             <h2>Gym</h2>
-            <img src="/images/gym.jpg" alt="image" class="card__img">
+            <img src="images/gym.jpg" alt="image" class="card__img">
 
             <div class="card__data">
-               <span class="card__description">Luxury Hotel</span>
-               <p class="card__title">Gym</p>
+               <p class="card__title"><b style="padding-right: 5px;">Location:</b>8th Floor</p>
+               <p class="card__title"><b style="padding-right: 5px;">Open:</b>06:00 AM - 06:00 PM</p>
+               <p class="card__title"><b style="padding-right: 5px;">Available for:</b>Executive Rooms</p>
             </div>
          </div>
 
          <div class="card__article">
             <h2>Meeting Room</h2>
-            <img src="/images/meeting.jpg" alt="image" class="card__img">
+            <img src="images/meeting.jpg" alt="image" class="card__img">
 
             <div class="card__data">
-               <span class="card__description">Luxury Hotel</span>
-               <p class="card__title">Meeting Room</p>
+               <p class="card__title"><b style="padding-right: 5px;">Location:</b>3rd Floor</p>
+               <p class="card__title"><b style="padding-right: 5px;">Open:</b>06:00 AM - 04:00 PM</p>
+               <p class="card__title"><b style="padding-right: 5px;">Available for:</b>All Type of Rooms</p>
             </div>
          </div>
 
          <div class="card__article">
             <h2>Dining Room</h2>
-            <img src="/images/diningR.jpg" alt="image" class="card__img">
+            <img src="images/diningR.jpg" alt="image" class="card__img">
 
             <div class="card__data">
-               <span class="card__description">Luxury Hotel</span>
-               <p class="card__title">Dining Room</p>
+               <p class="card__title"><b style="padding-right: 5px;">Location:</b>2nd Floor</p>
+               <p class="card__title"><b style="padding-right: 5px;">Open:</b>24 Hour</p>
+               <p class="card__title"><b style="padding-right: 5px;">Available for:</b>All Type of Rooms</p>
             </div>
          </div>
 
          <div class="card__article">
             <h2>Swimming Pool</h2>
-            <img src="/images/pool.jpg" alt="image" class="card__img">
+            <img src="images/pool.jpg" alt="image" class="card__img">
 
             <div class="card__data">
-               <span class="card__description">Luxury Hotel</span>
-               <p class="card__title">Swimming Pool</p>
+               <p class="card__title"><b style="padding-right: 5px;">Location:</b>1st Floor</p>
+               <p class="card__title"><b style="padding-right: 5px;">Open:</b>06:00 AM - 06:00 PM</p>
+               <p class="card__title"><b style="padding-right: 5px;">Available for:</b>All Type of Rooms</p>
             </div>
          </div>
 
        <div class="card__article">
          <h2>Spa</h2>
-            <img src="/images/spa.jpg" alt="image" class="card__img">
+            <img src="images/spa.jpg" alt="image" class="card__img">
 
             <div class="card__data">
-               <span class="card__description">Luxury Hotel</span>
-               <p class="card__title">Spa</p>
+               <p class="card__title"><b style="padding-right: 5px;">Location:</b>8th Floor</p>
+               <p class="card__title"><b style="padding-right: 5px;">Open:</b>06:00 AM - 11:00 PM</p>
+               <p class="card__title"><b style="padding-right: 5px;">Available for:</b>Executive Rooms</p>
             </div>
        </div>
       </div>
@@ -111,7 +117,7 @@
            <div class="footer-col">
                <h4>Luxury Hotel</h4>
                <ul>
-                  <li><a href="/index.html">Home</a></li>
+                  <li><a href="index.html">Home</a></li>
                   <li><a href="rooms.html">Rooms</a></li>
                   <li><a href="facilities.html">Facilities</a></li>
                   <li><a href="faq.html">Faq</a></li>
@@ -152,7 +158,7 @@
            </div>
        </div>
    </div>
-   <p style="color:#B9A13F; text-align: center; display: block; line-height: 1.9rem; margin-top: 4rem; margin-bottom: 0;">&#169; 2023 - Made by Luxury Hotel</p>
+   <p style="color:#B9A13F; text-align: center; display: block; line-height: 1.9rem; margin-top: 4rem; margin-bottom: 0;">&#169; 2023 - Made by Luxury Hotel - Group 10</p>
 </footer>
 <!-- Footer End -->
    <script src="/js/facilities.js"></script>
