--- a/faq.html
+++ b/faq.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rooms</title>
-    <link rel="stylesheet" href="/css/faq.css">
-	<link rel="icon" href="/images/logo.png" type="luxury-hotel-logo">
+    <title>Luxury Hotel</title>
+    <link rel="stylesheet" href="css/faq.css">
+	<link rel="icon" href="images/logo.png" type="luxury-hotel-logo">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
 </head>
@@ -13,21 +13,21 @@
 <body>
 <!-- Header Start -->
 <header>
-    <a href="#"><img src="/images/logo.png" class="logo" width="150" height="120"></a>
+    <a href="#"><img src="images/logo.png" class="logo" width="150" height="120"></a>
 
     <div>
       <ul id="navbar">
-          <li><a class="active" href="/index.html">Home</a></li>
+          <li><a class="active" href="index.html">Home</a></li>
           <li><a href="rooms.html">Rooms</a></li>
           <li><a href="facilities.html">Facilities</a></li>
           <li><a href="faq.html">Faq</a></li>
-          <li><a href="ourteam.html">Our Teams</a></li>
-          <li><a id="login" href="login.html"><i class="fas fa-user"></i></a></li>
+          <li><a href="ourteam.html">Our Team</a></li>
+          <!-- <li><a id="login" href="login.html"><i class="fas fa-user"></i></a></li> -->
           <a href="#" id="close"><i class="fas fa-times" style="color: #B9A13F;"></i></a>
       </ul>
     </div>
     <div id="mobile">
-      <a href="login.html"><i class="fas fa-user" style="color: #B9A13F;"></i></a>
+      <!-- <a href="login.html"><i class="fas fa-user" style="color: #B9A13F;"></i></a> -->
       <i id="bar" class="fas fa-outdent" style="color: #B9A13F;"></i>
     </div>
 </header>
@@ -36,41 +36,41 @@
 <!-- Start FAQ -->
 <div class="accordion">
     <div class="image-box">
-      <img src="/images/Faq.png" alt="">
+      <img src="images/Faq.png" alt="">
     </div>
     <div class="accordion-text">
       <div class="title">FAQ</div>
     <ul class="faq-text">
       <li>
         <div class="question-arrow">
-          <span class="question">Apa fasilitas yang dapat diakses oleh tamu dan sudah termasuk dalam biaya kamar?</span>
+          <span class="question">What facilities guests have access and include in the room rate?</span>
           <i class="bx bxs-chevron-down arrow"></i>
         </div>
-        <p> Kami menyediakan Wi-Fi gratis, kolam renang, restoran di dalam hotel, dan gym. tetapi, untuk sarapan tidak termasuk dalam harga kamar.</p>
+        <p> We provide free Wi-Fi, swimming pool, on-site restaurant and gym. However, breakfast is not included in the room price</p>
         <span class="line"></span>
       </li>
       <li>
         <div class="question-arrow">
-          <span class="question">Pukul berapa waktu Check-In & Check-Out?</span>
+          <span class="question">What time to Check-In & Check-Out?</span>
           <i class="bx bxs-chevron-down arrow"></i>
         </div>
-        <p>Waktu check-in kami dimulai pada pukul 14.00 WIB, sementara waktu check-out adalah pukul 12.00 WIB. Kami juga menawarkan opsi check-in lebih awal dengan biaya tambahan, dan opsi check-out melewati waktu standar, tergantung pada ketersediaan kamar.</p>
+        <p>Our check-in time starts at 14:00 PM, while check-out time is 12:00 PM. We also offer early check-in options and late check-out options at an additional charge, subject to room availability</p>
         <span class="line"></span>
       </li>
       <li>
         <div class="question-arrow">
-          <span class="question">Apakah hotel menyediakan fasilitas parkir dan valet parking serta apakah ada biaya tambahan?</span>
+          <span class="question">Does the hotel provide parking and valet parking facilities and is there any additional charge?</span>
           <i class="bx bxs-chevron-down arrow"></i>
         </div>
-        <p>Tentu, Fasilitas parkir ini dapat digunakan tanpa biaya tambahan. Jika Anda lebih memilih valet parking, layanan tersebut juga tersedia dengan biaya tambahan yang dapat Anda peroleh di resepsionis</p>
+        <p>Of course, this parking facility can be used without additional costs. If you prefer valet parking, this service is also available for an additional fee which you can obtain at the front desk</p>
         <span class="line"></span>
       </li>
       <li>
         <div class="question-arrow">
-          <span class="question">Bagaimana kebijakan pembatalan reservasi di hotel ini?</span>
+          <span class="question">What is the reservation cancellation policy at this hotel?</span>
           <i class="bx bxs-chevron-down arrow"></i>
         </div>
-        <p>Kami memberikan kelonggaran pembatalan tanpa biaya jika dilakukan 1 hari sebelum tanggal check-in. Lewat dari itu, akan dikenakan biaya pembatalan sebesar Rp250.000. <!--Proses pembatalan dan perubahan dapat dilakukan secara online melalui situs resmi kami.--></p>
+        <p>We provide free cancellation if done 1 day before the check-in date. After that, a cancellation fee of IDR 250,000 will be charged</p>
         <span class="line"></span>
       </li>
     </ul>
@@ -84,7 +84,7 @@
             <div class="footer-col">
                 <h4>Luxury Hotel</h4>
                 <ul>
-                  <li><a href="/index.html">Home</a></li>
+                  <li><a href="index.html">Home</a></li>
                   <li><a href="rooms.html">Rooms</a></li>
                   <li><a href="facilities.html">Facilities</a></li>
                   <li><a href="faq.html">Faq</a></li>
@@ -113,21 +113,21 @@
             <div class="footer-col">
                 <h4>Partners</h4>
                 <div class="social-links">
-                    <a href="#footer"><img src="/images/unsika.png" alt="partners" width="30" height="30"></a>
-                    <a href="#footer"><img src="/images/unj.png" alt="partners" width="30" height="30"></a>
-                    <a href="#footer"><img src="/images/unpad.png" alt="partners" width="40" height="35"></a>
-                    <a href="#footer"><img src="/images/unej.png" alt="partners" width="30" height="30"></a>
-                    <a href="#footer"><img src="/images/unnes.png" alt="partners" width="30" height="40"></a>
-                    <a href="#footer"><img src="/images/KM.png" alt="partners" width="30" height="30"></a>
-                    <a href="#footer"><img src="/images/msib1.png" alt="partners" width="30" height="30"></a>
-                    <a href="#footer"><img src="/images/revou.png" alt="partners" width="30" height="30"></a>
+                    <a href="#footer"><img src="images/unsika.png" alt="partners" width="30" height="30"></a>
+                    <a href="#footer"><img src="images/unj.png" alt="partners" width="30" height="30"></a>
+                    <a href="#footer"><img src="images/unpad.png" alt="partners" width="40" height="35"></a>
+                    <a href="#footer"><img src="images/unej.png" alt="partners" width="30" height="30"></a>
+                    <a href="#footer"><img src="images/unnes.png" alt="partners" width="30" height="40"></a>
+                    <a href="#footer"><img src="images/KM.png" alt="partners" width="30" height="30"></a>
+                    <a href="#footer"><img src="images/msib1.png" alt="partners" width="30" height="30"></a>
+                    <a href="#footer"><img src="images/revou.png" alt="partners" width="30" height="30"></a>
                 </div>
             </div>
         </div>
     </div>
-    <p style="color:#B9A13F; text-align: center; display: block; line-height: 1.9rem; margin-top: 4rem; margin-bottom: 0;">&#169; 2023 - Made by Luxury Hotel</p>
+    <p style="color:#B9A13F; text-align: center; display: block; line-height: 1.9rem; margin-top: 4rem; margin-bottom: 0;">&#169; 2023 - Made by Luxury Hotel - Group 10</p>
 </footer>
 <!-- Footer End -->
-<script src="/js/faq.js"></script>
+<script src="js/faq.js"></script>
 </body>
 </html>
