--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <div>
       <ul id="navbar">
           <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="html/rooms.html">Rooms</a></li>
-          <li><a href="html/facilities.html">Facilities</a></li>
-          <li><a href="html/faq.html">Faq</a></li>
-          <li><a href="html/ourteam.html">Our Teams</a></li>
+          <li><a href="rooms.html">Rooms</a></li>
+          <li><a href="facilities.html">Facilities</a></li>
+          <li><a href="faq.html">Faq</a></li>
+          <li><a href="ourteam.html">Our Team</a></li>
           <!-- <li><a id="login" href="login/login.html"><i class="fas fa-user"></i></a></li> -->
           <a href="#" id="close"><i class="fas fa-times" style="color: #B9A13F;"></i></a>
       </ul>
@@ -60,7 +60,7 @@
         <div class="text-main">
             <h1>Luxury Hotel</h1>
             <p><br>Here are some famous individuals who have <br>
-                reviewed this luxury hotel.</p>
+                reviewed this luxury hotel</p>
             <a href="#review" class="buttons">View More</a>
         </div>
         <img src="images/reviewer.jpg" style="width: 100%; height: 100%;">
@@ -83,9 +83,9 @@
     <div class="row-about">
         <h1>About Us</h1>
         <div class="text-about">
-            <h2>Luxury Hotel</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit est, laboriosam impedit, quae beatae amet ad modi esse sed eum rerum et aliquid? Ipsum nostrum in debitis veritatis rem commodi?</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit est, laboriosam impedit, quae beatae amet ad modi esse sed eum rerum et aliquid? Ipsum nostrum in debitis veritatis rem commodi?</p>
+            <h2>Luxury Hotel</h2> <br>
+            <p>Welcome to Luxury Hotel, a destination that blends luxury, hospitality, and unforgettable experiences. Situated in a captivating location, we are committed to providing outstanding service and exceptional accommodations to every guest who stays with us.</p> <br>
+            <p>Since our inception, Luxury Hotel has been a symbol of luxury and elegance. With various amenities and services designed to pamper every guest, we prioritize your comfort above all else.</p>
         </div>
     </div>
 </section>
@@ -97,8 +97,8 @@
     <div class="head-recomen">
         <!-- <span>Explore</span> -->
         <h2>Recomendation Rooms</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, <br>
-            adipisicing elit. Dolor quos illo</p>
+        <p>Here are some recommended room options <br>
+            available at Luxury Hotel</p>
     </div>
 
     <div class="box-recomen">
@@ -107,12 +107,12 @@
             <h3>Executive Spesial</h3>
             
             <p class="price">
-                <span>Rp.1.000.000 /</span> Per Night
+                <span>Rp.1.200.000 /</span> Per Night
             </p>
 
             <div class="box-btn">
-                <a href="html/form.html" class="book">Book Now</a>
-                <a href="html/rooms.html#executive" class="view">More Info</a>
+                <a href="form.html" class="book">Book Now</a>
+                <a href="rooms.html#spesial" class="view">More Info</a>
             </div>
         </div>
 
@@ -125,8 +125,8 @@
             </p>
 
             <div class="box-btn">
-                <a href="html/form.html" class="book">Book Now</a>
-                <a href="html/rooms.html#executive" class="view">More Info</a>
+                <a href="form.html" class="book">Book Now</a>
+                <a href="rooms.html#epic" class="view">More Info</a>
             </div>
         </div>
 
@@ -135,12 +135,12 @@
             <h3>Executive Legendary</h3>
 
             <p class="price">
-                <span>Rp.2.000.000 /</span> Per Night
+                <span>Rp.1.700.000 /</span> Per Night
             </p>
 
             <div class="box-btn">
-                <a href="html/form.html" class="book">Book Now</a>
-                <a href="html/rooms.html#executive" class="view">More Info</a>
+                <a href="form.html" class="book">Book Now</a>
+                <a href="rooms.html#legendary" class="view">More Info</a>
             </div>
         </div>
     </div>
@@ -152,14 +152,14 @@
 <section class="review-main" id="review">
     <div class="head-review">
         <!-- <span>Explore</span> -->
-        <h2>Reviews from some famous people</h2>
+        <h2>Reviews Hotel</h2>
         <p>Here are some famous individuals who have <br>
-            reviewed this luxury hotel.</p>
+            reviewed this Luxury Hotel</p>
     </div>
     <div class="wrapper">
         <div class="box">
           <i class="fas fa-quote-left quote"></i>
-          <p>The culinary experience at Luxury Hotel is nothing short of exceptional. The range of cuisines offered at the hotel's restaurant is a perfect blend of local flavors and international delights. Each dish is meticulously prepared using high-quality, fresh ingredients. The extensive menu caters to diverse palates, featuring authentic local delicacies alongside delectable international fare. The quality of taste and presentation of the food here is truly awe-inspiring.</p>
+          <p>The culinary experience at Luxury Hotel is nothing short of exceptional. The range of cuisines offered at the hotel's restaurant is a perfect blend of local flavors and international delights. Each dish is meticulously prepared using high-quality, fresh ingredients. The extensive menu caters to diverse palates, featuring authentic local delicacies alongside delectable international fare. The quality of taste and presentation of the food here is truly awe-inspiring</p>
           <div class="content">
             <div class="info">
               <div class="name">Tanboy Kun</div>
@@ -179,7 +179,7 @@
         </div>
         <div class="box">
           <i class="fas fa-quote-left quote"></i>
-          <p>The rooms at Luxury Hotel strike a perfect balance between comfort and luxury. Their elegant design with modern touches creates a warm and welcoming ambiance. Room cleanliness is impeccably maintained, and the serene atmosphere fosters an ideal environment for relaxation after a day's activities. In-room amenities such as plush bedding and luxurious bath essentials are thoughtfully curated to meet guests' needs at the highest standards.</p>
+          <p>The rooms at Luxury Hotel strike a perfect balance between comfort and luxury. Their elegant design with modern touches creates a warm and welcoming ambiance. Room cleanliness is impeccably maintained, and the serene atmosphere fosters an ideal environment for relaxation after a day's activities. In-room amenities such as plush bedding and luxurious bath essentials are thoughtfully curated to meet guests' needs at the highest standards</p>
           <div class="content">
             <div class="info">
               <div class="name">Windah Basudara</div>
@@ -199,7 +199,7 @@
         </div>
         <div class="box">
           <i class="fas fa-quote-left  quote"></i>
-          <p>Luxury Hotel offers comprehensive facilities designed to pamper its guests. From a beautiful swimming pool to a state-of-the-art fitness center and a spa offering various relaxation treatments, the amenities here are top-notch. Additionally, their concierge service is incredibly helpful in providing information about local attractions and activities around the hotel area. With complete meeting spaces and business services, this hotel caters perfectly to both business and leisure travelers.</p>
+          <p>Luxury Hotel offers comprehensive facilities designed to pamper its guests. From a beautiful swimming pool to a state-of-the-art fitness center and a spa offering various relaxation treatments, the amenities here are top-notch. Additionally, their concierge service is incredibly helpful in providing information about local attractions and activities around the hotel area. With complete meeting spaces and business services, this hotel caters perfectly to both business and leisure travelers</p>
           <div class="content">
             <div class="info">
               <div class="name">Miawaug</div>
@@ -231,21 +231,21 @@
                 <h4>Luxury Hotel</h4>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="html/rooms.html">Rooms</a></li>
-                    <li><a href="html/facilities.html">Facilities</a></li>
-                    <li><a href="html/faq.html">Faq</a></li>
-                    <li><a href="html/ourteam.html">Our Team</a></li>
+                    <li><a href="rooms.html">Rooms</a></li>
+                    <li><a href="facilities.html">Facilities</a></li>
+                    <li><a href="faq.html">Faq</a></li>
+                    <li><a href="ourteam.html">Our Team</a></li>
                 </ul>
             </div>
             <div class="footer-col">
                 <h4>Tipe-tipe Rooms</h4>
                 <ul>
-                    <li><a href="html/rooms.html#basic">Deluxe Basic</a></li>
-                    <li><a href="html/rooms.html#common">Deluxe Common</a></li>
-                    <li><a href="html/rooms.html#rare">Deluxe Rare</a></li>
-                    <li><a href="html/rooms.html#spesial">Executive Spesial</a></li>
-                    <li><a href="html/rooms.html#epic">Executive Epic</a></li>
-                    <li><a href="html/rooms.html#legendary">Executive Legendary</a></li>
+                    <li><a href="rooms.html#basic">Deluxe Basic</a></li>
+                    <li><a href="rooms.html#common">Deluxe Common</a></li>
+                    <li><a href="rooms.html#rare">Deluxe Rare</a></li>
+                    <li><a href="rooms.html#spesial">Executive Spesial</a></li>
+                    <li><a href="rooms.html#epic">Executive Epic</a></li>
+                    <li><a href="rooms.html#legendary">Executive Legendary</a></li>
                 </ul>
             </div>
             <div class="footer-col">
@@ -271,7 +271,7 @@
             </div>
         </div>
     </div>
-    <p style="color:#B9A13F; text-align: center; display: block; line-height: 1.9rem; margin-top: 4rem; margin-bottom: 0;">&#169; 2023 - Made by Luxury Hotel</p>
+    <p style="color:#B9A13F; text-align: center; display: block; line-height: 1.9rem; margin-top: 4rem; margin-bottom: 0;">&#169; 2023 - Made by Luxury Hotel - Group 10</p>
 </footer>
 <!-- Footer End -->
 <script src="js/script.js"></script>    
