--- a/ourteam.html
+++ b/ourteam.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Team</title>
-    <link rel="stylesheet" href="/css/ourteam.css">
-	<link rel="icon" href="/images/logo.png" type="luxury-hotel-logo">
+    <title>Luxury Hotel</title>
+    <link rel="stylesheet" href="css/ourteam.css">
+	<link rel="icon" href="images/logo.png" type="luxury-hotel-logo">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
 </head>
@@ -13,21 +13,21 @@
 <body>
 <!-- Header Start -->
 <header>
-    <a href="#"><img src="/images/logo.png" class="logo" width="150" height="120"></a>
+    <a href="#"><img src="images/logo.png" class="logo" width="150" height="120"></a>
 
     <div>
       <ul id="navbar">
-          <li><a class="active" href="/index.html">Home</a></li>
+          <li><a class="active" href="index.html">Home</a></li>
           <li><a href="rooms.html">Rooms</a></li>
           <li><a href="facilities.html">Facilities</a></li>
           <li><a href="faq.html">Faq</a></li>
-          <li><a href="ourteam.html">Our Teams</a></li>
-          <li><a id="login" href="login.html"><i class="fas fa-user"></i></a></li>
+          <li><a href="ourteam.html">Our Team</a></li>
+          <!-- <li><a id="login" href="login.html"><i class="fas fa-user"></i></a></li> -->
           <a href="#" id="close"><i class="fas fa-times" style="color: #B9A13F;"></i></a>
       </ul>
     </div>
     <div id="mobile">
-      <a href="login.html"><i class="fas fa-user" style="color: #B9A13F;"></i></a>
+      <!-- <a href="login.html"><i class="fas fa-user" style="color: #B9A13F;"></i></a> -->
       <i id="bar" class="fas fa-outdent" style="color: #B9A13F;"></i>
     </div>
 </header>
@@ -41,9 +41,9 @@
         <!-- 1 ROW -->
 		<div class="team-content">
 			<div class="box">
-				<img src="/images/arya.jpg" >
+				<img src="images/arya.jpg" >
 				<h3>M. Rizki Arya Rifai</h3>
-				<h5>Project Leader & Front End Engineer</h5>
+				<h5>Project Leader</h5>
 				<div class="icons">
 					<a href="https://www.linkedin.com/in/mrizkiaryarifai?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></i></a>
 					<a href="https://instagram.com/rizki.arya6?igshid=OGQ5ZDc2ODk2ZA"><i class="fab fa-instagram"></i></i></a>
@@ -51,7 +51,7 @@
 			</div>
 
 			<div class="box">
-				<img src="/images/liza.jpg">
+				<img src="images/liza.jpg">
 				<h3>Allyza Yusykarina Safitri</h3>
 				<h5>Front End Engineer</h5>
 				<div class="icons">
@@ -61,7 +61,7 @@
 			</div>
 
 			<div class="box">
-				<img src="/images/angel.jpg">
+				<img src="images/angel.jpg">
 				<h3>Chaterine Ariane Angelina</h3>
 				<h5>Quality Assurance</h5>
 				<div class="icons">
@@ -74,17 +74,17 @@
         <!-- 2 ROW -->
         <div class="team-content">
             <div class="box">
-				<img src="/images/sintia.jpg">
-				<h3>Anis Sintia</h3>
+				<img src="images/ney.jpg">
+				<h3>Ney Efnan Prazeti</h3>
 				<h5>Quality Assurance</h5>
 				<div class="icons">
-					<a href="https://www.linkedin.com/in/anis-sintia-724a00276?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></i></a>
-					<a href="https://instagram.com/anissintyaa?igshid=NzZlODBkYWE4Ng"><i class="fab fa-instagram"></i></i></a>
+					<a href="https://www.linkedin.com/in/ney-efnan-prazeti-129517270?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></i></a>
+					<a href="https://instagram.com/efnnprzt?igshid=MTNiYzNiMzkwZA"><i class="fab fa-instagram"></i></i></a>
 				</div>
 			</div>
 
             <div class="box">
-				<img src="/images/aris.jpg">
+				<img src="images/aris.jpg">
 				<h3>Aries Sukma Haq</h3>
 				<h5>Back End Engineer</h5>
 				<div class="icons">
@@ -94,12 +94,12 @@
 			</div>
 
             <div class="box">
-				<img src="/images/ney.jpg">
-				<h3>Ney Efnan Prazeti</h3>
+				<img src="images/sintia.jpg">
+				<h3>Anis Sintia</h3>
 				<h5>Back End Engineer</h5>
 				<div class="icons">
-					<a href="https://www.linkedin.com/in/ney-efnan-prazeti-129517270?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></i></a>
-					<a href="https://instagram.com/efnnprzt?igshid=MTNiYzNiMzkwZA"><i class="fab fa-instagram"></i></i></a>
+					<a href="https://www.linkedin.com/in/anis-sintia-724a00276?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></i></a>
+					<a href="https://instagram.com/anissintyaa?igshid=NzZlODBkYWE4Ng"><i class="fab fa-instagram"></i></i></a>
 				</div>
 			</div>
         </div>
@@ -114,7 +114,7 @@
             <div class="footer-col">
                 <h4>Luxury Hotel</h4>
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="rooms.html">Rooms</a></li>
                     <li><a href="facilities.html">Facilities</a></li>
                     <li><a href="faq.html">Faq</a></li>
@@ -143,19 +143,19 @@
             <div class="footer-col">
                 <h4>Partners</h4>
                 <div class="social-links">
-                    <a href="#footer"><img src="/images/unsika.png" alt="partners" width="30" height="30"></a>
-                    <a href="#footer"><img src="/images/unj.png" alt="partners" width="30" height="30"></a>
-                    <a href="#footer"><img src="/images/unpad.png" alt="partners" width="40" height="35"></a>
-                    <a href="#footer"><img src="/images/unej.png" alt="partners" width="30" height="30"></a>
-                    <a href="#footer"><img src="/images/unnes.png" alt="partners" width="30" height="40"></a>
-                    <a href="#footer"><img src="/images/KM.png" alt="partners" width="30" height="30"></a>
-                    <a href="#footer"><img src="/images/msib1.png" alt="partners" width="30" height="30"></a>
-                    <a href="#footer"><img src="/images/revou.png" alt="partners" width="30" height="30"></a>
+                    <a href="#footer"><img src="images/unsika.png" alt="partners" width="30" height="30"></a>
+                    <a href="#footer"><img src="images/unj.png" alt="partners" width="30" height="30"></a>
+                    <a href="#footer"><img src="images/unpad.png" alt="partners" width="40" height="35"></a>
+                    <a href="#footer"><img src="images/unej.png" alt="partners" width="30" height="30"></a>
+                    <a href="#footer"><img src="images/unnes.png" alt="partners" width="30" height="40"></a>
+                    <a href="#footer"><img src="images/KM.png" alt="partners" width="30" height="30"></a>
+                    <a href="#footer"><img src="images/msib1.png" alt="partners" width="30" height="30"></a>
+                    <a href="#footer"><img src="images/revou.png" alt="partners" width="30" height="30"></a>
                 </div>
             </div>
         </div>
     </div>
-    <p style="color:#B9A13F; text-align: center; display: block; line-height: 1.9rem; margin-top: 4rem; margin-bottom: 0;">&#169; 2023 - Made by Luxury Hotel</p>
+    <p style="color:#B9A13F; text-align: center; display: block; line-height: 1.9rem; margin-top: 4rem; margin-bottom: 0;">&#169; 2023 - Made by Luxury Hotel - Group 10</p>
 </footer>
 <!-- Footer End -->
 <script src="/js/ourteam.js"></script>
