--- a/facilities.html
+++ b/facilities.html
@@ -146,14 +146,14 @@
            <div class="footer-col">
                <h4>Partners</h4>
                <div class="social-links">
-                   <a href="#footer"><img src="/images/unsika.png" alt="partners" width="30" height="30"></a>
-                   <a href="#footer"><img src="/images/unj.png" alt="partners" width="30" height="30"></a>
-                   <a href="#footer"><img src="/images/unpad.png" alt="partners" width="40" height="35"></a>
-                   <a href="#footer"><img src="/images/unej.png" alt="partners" width="30" height="30"></a>
-                   <a href="#footer"><img src="/images/unnes.png" alt="partners" width="30" height="40"></a>
-                   <a href="#footer"><img src="/images/KM.png" alt="partners" width="30" height="30"></a>
-                   <a href="#footer"><img src="/images/msib1.png" alt="partners" width="30" height="30"></a>
-                   <a href="#footer"><img src="/images/revou.png" alt="partners" width="30" height="30"></a>
+                   <a href="#footer"><img src="images/unsika.png" alt="partners" width="30" height="30"></a>
+                   <a href="#footer"><img src="images/unj.png" alt="partners" width="30" height="30"></a>
+                   <a href="#footer"><img src="images/unpad.png" alt="partners" width="40" height="35"></a>
+                   <a href="#footer"><img src="images/unej.png" alt="partners" width="30" height="30"></a>
+                   <a href="#footer"><img src="images/unnes.png" alt="partners" width="30" height="40"></a>
+                   <a href="#footer"><img src="images/KM.png" alt="partners" width="30" height="30"></a>
+                   <a href="#footer"><img src="images/msib1.png" alt="partners" width="30" height="30"></a>
+                   <a href="#footer"><img src="images/revou.png" alt="partners" width="30" height="30"></a>
                </div>
            </div>
        </div>
