--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div class="box-recomen">
         <div class="box">
             <img src="images/Executive Spesial.jpg" alt="">
-            <h3>Executive Spesial</h3>
+            <h3>Executive Special</h3>
             
             <p class="price">
                 <span>Rp.1.200.000 /</span> Per Night
