--- a/rooms.html
+++ b/rooms.html
@@ -152,7 +152,7 @@
                 <img src="images/Executive Spesial.jpg" alt="room-image">
             </div>
             <div class="room-text">
-                <h3 id="spesial">Executive Spesial</h3>
+                <h3 id="spesial">Executive Special</h3>
                 <ul>
                     <li>
                         <i class="fas fa-arrow-alt-circle-right"></i>
